--- a/docker-compose.clean.yaml
+++ b/docker-compose.clean.yaml
@@ -89,6 +89,39 @@ services:
     volumes:
       - storage_data:/app/storage
 
+  sidekiq:
+    image: chatwoot/chatwoot:v3.12.0
+    restart: always
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    environment:
+      NODE_ENV: production
+      RAILS_ENV: production
+      INSTALLATION_ENV: docker
+
+      # 数据库配置
+      POSTGRES_HOST: postgres
+      POSTGRES_USERNAME: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DATABASE: chatwoot
+
+      # Redis配置
+      REDIS_URL: redis://redis:6379
+
+      # 应用配置
+      SECRET_KEY_BASE: a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0u1v2w3x4y5z6a7b8c9d0e1f2g3h4i5j6k7l8m9n0o1p2q3r4s5t6u7v8w9x0y1z2
+
+      # 日志配置
+      RAILS_LOG_TO_STDOUT: true
+      LOG_LEVEL: info
+
+    command: ['bundle', 'exec', 'sidekiq', '-C', 'config/sidekiq.yml']
+    volumes:
+      - storage_data:/app/storage
+
 volumes:
   postgres_data:
   redis_data:
