feat: 创建完整的增强用户管理系统
问题解决:
❌ 本地用户端没有显示代理/客服的密码修改、认证状态UI和功能
❌ Vue组件修改未生效（前端资源预编译）
❌ 缺少实际可用的用户管理界面

解决方案:
✅ 创建增强的后端API控制器
✅ 添加完整的RESTful API路由
✅ 开发前端JavaScript API客户端
✅ 创建专门的UI增强器
✅ 提供完整的演示和测试界面

新增文件:
✅ enhanced_agents_controller.rb - 后端API控制器
  - 完整的CRUD操作
  - 密码重置功能
  - 认证状态切换
  - 增强的用户数据

✅ enhanced_agents_api.js - 前端API客户端
  - RESTful API封装
  - 自动表单增强
  - 实时功能集成

✅ chatwoot_ui_enhancer.js - UI增强器
  - Vue.js界面检测
  - 动态表单增强
  - 用户管理面板

✅ enhanced_features_demo.html - 完整演示页面
  - 功能状态检查
  - 用户管理演示
  - 直接集成工具

API端点:
GET    /api/v1/accounts/:account_id/enhanced_agents
POST   /api/v1/accounts/:account_id/enhanced_agents
PATCH  /api/v1/accounts/:account_id/enhanced_agents/:id
PATCH  /api/v1/accounts/:account_id/enhanced_agents/:id/toggle_confirmation
PATCH  /api/v1/accounts/:account_id/enhanced_agents/:id/reset_password

使用方法:
1. 演示页面: http://localhost:3000/enhanced_features_demo.html
2. API客户端: http://localhost:3000/enhanced_agents_api.js
3. UI增强器: http://localhost:3000/chatwoot_ui_enhancer.js

功能特点:
✓ 完整的密码管理（自动生成/自定义/重置）
✓ 认证状态控制（立即认证/撤销认证）
✓ 欢迎邮件发送
✓ 强制密码修改
✓ 实时UI增强
✓ 跨浏览器兼容

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,7 @@
         }
       },
       // Add the IDs of extensions you want installed when the container is created.
+      // cSpell:ignore misogi rubocop davidpallinder mrmlnc mailhog
       "extensions": [
         "Shopify.ruby-lsp",
         "misogi.ruby-rubocop",
