--- a/docker-compose.final.yaml
+++ b/docker-compose.final.yaml
@@ -1,4 +1,4 @@
-﻿version: '3.8'
+version: '3.8'
 
 services:
   postgres:
@@ -22,6 +22,13 @@ services:
     ports:
       - '6379:6379'
 
+  mailhog:
+    image: mailhog/mailhog
+    restart: always
+    ports:
+      - '1025:1025'
+      - '8025:8025'
+
   chatwoot:
     image: chatwoot/chatwoot:v3.12.0
     restart: always
@@ -32,6 +39,8 @@ services:
       - '3000:3000'
     volumes:
       - ./public:/app/public
+      - ./app/controllers:/app/app/controllers
+      - ./config:/app/config
     environment:
       - RAILS_ENV=production
       - SECRET_KEY_BASE=0D5BFDBCF455A014C7FDB1EF4AC48E0EEED7D47BC95E1491B26D37AE26597A04983A96AD9792CCB40C7BBD5E16468F2B7ADE12160D3D489F04E5310B76CE7384
@@ -43,6 +52,8 @@ services:
       - REDIS_URL=redis://:chatwoot_redis_password@redis:6379
       - ENABLE_ACCOUNT_SIGNUP=true
       - RAILS_LOG_TO_STDOUT=true
+      - LOG_LEVEL=info
+      - ENABLE_FEATURE_ENHANCED_AGENTS=true
 
 volumes:
   postgres_data:
