--- a/docker-compose.simple.yaml
+++ b/docker-compose.simple.yaml
@@ -1,6 +1,8 @@
+﻿version: '3.8'
+
 services:
   postgres:
-    image: postgres:13
+    image: postgres:15
     restart: always
     ports:
       - '5432:5432'
@@ -9,50 +11,73 @@ services:
     environment:
       - POSTGRES_DB=chatwoot
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=chatwoot_password
+      - POSTGRES_PASSWORD=
+      - POSTGRES_HOST_AUTH_METHOD=trust
 
   redis:
     image: redis:alpine
     restart: always
-    ports:
-      - '6379:6379'
+    command: ["sh", "-c", "redis-server --requirepass chatwoot_redis_password"]
     volumes:
       - redis_data:/data
+    ports:
+      - '6379:6379'
 
-  rails:
-    image: chatwoot/chatwoot:latest
+  chatwoot:
+    image: chatwoot/chatwoot:v3.12.0
     restart: always
     depends_on:
       - postgres
       - redis
     ports:
       - '3000:3000'
-    env_file: .env
-    environment:
-      - NODE_ENV=production
-      - RAILS_ENV=production
-      - INSTALLATION_ENV=docker
-    entrypoint: docker/entrypoints/rails.sh
-    command: ['bundle', 'exec', 'rails', 's', '-p', '3000', '-b', '0.0.0.0']
     volumes:
-      - storage_data:/app/storage
-
-  sidekiq:
-    image: chatwoot/chatwoot:latest
-    restart: always
-    depends_on:
-      - postgres
-      - redis
-    env_file: .env
+      - ./app/controllers:/app/app/controllers
+      - ./app/javascript:/app/app/javascript
+      - ./public:/app/public
+      - ./config:/app/config
     environment:
-      - NODE_ENV=production
-      - RAILS_ENV=production
-      - INSTALLATION_ENV=docker
-    command: ['bundle', 'exec', 'sidekiq', '-C', 'config/sidekiq.yml']
-    volumes:
-      - storage_data:/app/storage
+      - RAILS_ENV=development
+      - SECRET_KEY_BASE=0D5BFDBCF455A014C7FDB1EF4AC48E0EEED7D47BC95E1491B26D37AE26597A04983A96AD9792CCB40C7BBD5E16468F2B7ADE12160D3D489F04E5310B76CE7384
+      - FRONTEND_URL=http://localhost:3000
+      - POSTGRES_HOST=postgres
+      - POSTGRES_USERNAME=postgres
+      - POSTGRES_PASSWORD=
+      - POSTGRES_DB=chatwoot
+      - REDIS_URL=redis://:chatwoot_redis_password@redis:6379
+      - ENABLE_ACCOUNT_SIGNUP=true
+      - RAILS_LOG_TO_STDOUT=true
+      - LOG_LEVEL=debug
+    command: >
+      sh -c "
+        echo 'Waiting for PostgreSQL...'
+        while ! nc -z postgres 5432; do sleep 1; done
+        echo 'PostgreSQL is ready!'
+        
+        echo 'Running database setup...'
+        bundle exec rails db:create db:migrate db:seed
+        
+        echo 'Creating admin user...'
+        bundle exec rails runner \"
+          account = Account.find_or_create_by(name: 'Default Account')
+          user = User.find_or_create_by(email: 'gibson@localhost.com') do |u|
+            u.name = 'Gibson Yang'
+            u.password = 'Gibson888555!'
+            u.password_confirmation = 'Gibson888555!'
+            u.confirmed_at = Time.current
+          end
+          
+          account_user = AccountUser.find_or_create_by(account: account, user: user) do |au|
+            au.role = 'administrator'
+          end
+          
+          puts 'Admin user created: gibson@localhost.com / Gibson888555!'
+        \"
+        
+        echo 'Starting Chatwoot...'
+        bundle exec rails server -b 0.0.0.0 -p 3000
+      "
 
 volumes:
   postgres_data:
   redis_data:
-  storage_data:
