--- a/docker-compose.stable.yaml
+++ b/docker-compose.stable.yaml
@@ -22,6 +22,13 @@ services:
     ports:
       - '6379:6379'
 
+  mailhog:
+    image: mailhog/mailhog
+    restart: always
+    ports:
+      - '1025:1025'
+      - '8025:8025'
+
   chatwoot:
     image: chatwoot/chatwoot:v3.12.0
     restart: always
@@ -31,9 +38,8 @@ services:
     ports:
       - '3000:3000'
     volumes:
-      - ./app/controllers:/app/app/controllers
-      - ./app/javascript:/app/app/javascript
       - ./public:/app/public
+      - ./app/controllers:/app/app/controllers
       - ./config:/app/config
     env_file: .env
     command: >
@@ -41,13 +47,10 @@ services:
         echo 'Waiting for PostgreSQL...'
         while ! nc -z postgres 5432; do sleep 1; done
         echo 'PostgreSQL is ready!'
-        
+
         echo 'Running database setup...'
-        bundle exec rails db:create db:migrate
-        
-        echo 'Seeding database...'
-        bundle exec rails db:seed
-        
+        bundle exec rails db:create db:migrate db:seed
+
         echo 'Creating admin user...'
         bundle exec rails runner \"
           account = Account.find_or_create_by(name: 'Default Account')
@@ -57,14 +60,12 @@ services:
             u.password_confirmation = 'Gibson888555!'
             u.confirmed_at = Time.current
           end
-          
-          account_user = AccountUser.find_or_create_by(account: account, user: user) do |au|
+          AccountUser.find_or_create_by(account: account, user: user) do |au|
             au.role = 'administrator'
           end
-          
-          puts 'Admin user created: gibson@localhost.com / Gibson888555!'
+          puts 'Admin user created!'
         \"
-        
+
         echo 'Starting Chatwoot...'
         bundle exec rails server -b 0.0.0.0 -p 3000
       "
