--- a/docker-compose.clean.yaml
+++ b/docker-compose.clean.yaml
@@ -30,6 +30,13 @@ services:
       timeout: 5s
       retries: 5
 
+  mailhog:
+    image: mailhog/mailhog
+    restart: always
+    ports:
+      - '1025:1025'
+      - '8025:8025'
+
   chatwoot:
     image: chatwoot/chatwoot:v3.12.0
     restart: always
@@ -61,13 +68,49 @@ services:
       # 功能配置
       ENABLE_ACCOUNT_SIGNUP: true
       MAILER_SENDER_EMAIL: Chatwoot <noreply@localhost>
-      
+
+      # 启用所有功能
+      ENABLE_FEATURE_MACROS: true
+      ENABLE_FEATURE_LABELS: true
+      ENABLE_FEATURE_INBOX_GREETING: true
+      ENABLE_FEATURE_TEAM_MANAGEMENT: true
+      ENABLE_FEATURE_AUTO_RESOLVE_CONVERSATIONS: true
+      ENABLE_FEATURE_CAMPAIGNS: true
+      ENABLE_FEATURE_INTEGRATIONS: true
+      ENABLE_FEATURE_REPORTS: true
+      ENABLE_FEATURE_AGENT_BOTS: true
+      ENABLE_FEATURE_HELP_CENTER: true
+      ENABLE_FEATURE_VOICE_RECORDER: true
+      ENABLE_FEATURE_EMOJI_PICKER: true
+      ENABLE_FEATURE_ATTACHMENT_PROCESSOR: true
+      ENABLE_FEATURE_ENHANCED_AGENTS: true
+      ENABLE_FEATURE_CUSTOM_ATTRIBUTES: true
+      ENABLE_FEATURE_WEBHOOKS: true
+      ENABLE_FEATURE_SLACK_INTEGRATION: true
+      ENABLE_FEATURE_FACEBOOK_INTEGRATION: true
+      ENABLE_FEATURE_TWITTER_INTEGRATION: true
+      ENABLE_FEATURE_WHATSAPP_INTEGRATION: true
+      ENABLE_FEATURE_SMS_INTEGRATION: true
+      ENABLE_FEATURE_EMAIL_INTEGRATION: true
+      ENABLE_FEATURE_WEBSITE_INTEGRATION: true
+      ENABLE_FEATURE_API_INTEGRATION: true
+
+      # 邮件配置
+      SMTP_DOMAIN: localhost
+      SMTP_ADDRESS: mailhog
+      SMTP_PORT: 1025
+      SMTP_USERNAME: ""
+      SMTP_PASSWORD: ""
+      SMTP_AUTHENTICATION: ""
+      SMTP_ENABLE_STARTTLS_AUTO: false
+      SMTP_OPENSSL_VERIFY_MODE: none
+
+      # 存储配置
+      ACTIVE_STORAGE_SERVICE: local
+
       # 日志配置
       RAILS_LOG_TO_STDOUT: true
       LOG_LEVEL: info
-      
-      # 跳过有问题的功能
-      SKIP_SEED: true
       
     entrypoint: |
       sh -c '
